check is file exists before read